--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,3 +14,5 @@ jobs:
           python-version: "3.8"
       - run: pip install poetry
       - run: make setup
+      - run: make lint
+      - run: make test
